finished the functionality however definetly could use some css and smoothing around the edges

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
 </head>
 <body>
-    
+    <button class = "button" id="rock"> Rock </button>
+    <button class = "button" id="paper"> Paper </button>
+    <button class = "button" id="scissors"> Scissors </button>
+    <div id="score">
+        computer wins 0, your wins 0
+    </div>
 </body>
 </html>
